added additional class path